2003-08-31  Philip Blundell  <philb@gnu.org>

	* sysdeps/unix/sysv/linux/arm/Versions: Add posix_fadvise64 and
	posix_fallocate64 at GLIBC_2.3.3.

2003-08-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/bsd-_setjmp.S: Use HIDDEN_JUMPTARGET.
	* include/setjmp.h: Add libc_hidden_proto for __sigsetjmp.

2003-08-30  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/generic/sysdep.h (cfi_window_save, CFI_WINDOW_SAVE): Define.
	* sysdeps/unix/sysv/linux/sparc/bits/setjmp.h: Allow file to be
	included multiple times.
	* sysdeps/unix/sysv/linux/sparc/sparc32/clone.S (__clone): Pass
	ptid, tls, ctid arguments to the kernel.
	* sysdeps/unix/sysv/linux/sparc/sparc32/getpagesize.c (__getpagesize):
	Use INTERNAL_SYSCALL instead of __syscall_getpagesize.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sigaction.c
	(__libc_sigaction): Use INLINE_SYSCALL instead of
	__syscall_rt_sigaction.
	* sysdeps/unix/sysv/linux/sparc/sparc32/syscalls.list
	(__syscall_getgroups, __syscall_getpagesize, __syscall__llseek,
	__syscall_setfsgid, __syscall_setfsuid, __syscall_setgid,
	__syscall_setgroups, __syscall_setregid, __syscall_setreuid,
	__syscall_ipc, __syscall_setuid, __syscall_rt_sigaction,
	__syscall_rt_sigpending, __syscall_rt_sigprocmask,
	__syscall_rt_sigqueueinfo, __syscall_rt_sigsuspend,
	__syscall_rt_sigtimedwait): Remove unneeded syscall stubs.
	* sysdeps/unix/sysv/linux/sparc/sparc32/Makefile (sysdep_routines):
	Remove rt_sigsuspend, rt_sigprocmask, rt_sigtimedwait,
	rt_sigqueueinfo, rt_sigaction and rt_sigpending.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep.h
	(__CLONE_SYSCALL_STRING): Define.
	* sysdeps/unix/sysv/linux/sparc/sparc32/socket.S (__socket): Add
	CFI directives.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h
	(__CLONE_SYSCALL_STRING): Define.
 	* sysdeps/unix/sysv/linux/sparc/sysdep.h (INLINE_CLONE_SYSCALL):
	Define.
	* sysdeps/unix/sysv/linux/sparc/system.c: New file.

2003-08-30  Ulrich Drepper  <drepper@redhat.com>
